--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button>Tutorials</button>
     </div>
     <div id="btn-matrix">
-      <button></button>
+      <button>Contact</button>
     </div>
   </div>
 </body>
