--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="index.css">
 </head>
-<body style="background-image: url("background.jpg");">  
+<body style="background: url("background.jpg");">  
   <div class="btn-circle">
     <div id="btn-horror">
       <button value="About Me">About Me</button>
