--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
+<!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale1">
   <link rel="stylesheet" href="index.css">
+  <script type="text/javascript" src="index.js"></script>
 </head>
 <body>  
   <div class="btn-circle">
     <div id="btn-horror">
-      <button value="About Me">About Me</button>
+      <button onclick="aboutmebtn()" value="About Me">About Me</button>
     </div> 
     <div class="inner" id="btn-starwars">
       <button>Projects</button>
