--- a/index.html
+++ b/index.html
@@ -6,23 +6,27 @@
   <link rel="stylesheet" href="index.css">
   <script type="text/javascript" src="index.js"></script>
 </head>
-<body>  
-  <div class="btn-circle">
+<body> 
     <div id="btn-horror">
       <button onclick="aboutmebtn()" value="About Me">About Me</button>
-    </div> 
-    <div class="inner" id="btn-starwars">
+    </div>
+  </br>
+</br> 
+</br>
+    <div id="btn-starwars">
       <button>Projects</button>
     </div>
-    <div class="inner" id="btn-home">
-      <button>Home</button>
-    </div>
-    <div class="inner" id="btn-stargate">
+  </br>
+</br>
+</br>
+    <div id="btn-stargate">
       <button>Tutorials</button>
     </div>
+  </br>
+</br>
+</br>
     <div id="btn-matrix">
       <button>Contact</button>
     </div>
-  </div>
 </body>
 </html>
