--- a/About Me/about.html
+++ b/About Me/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <!-- BASED ON: https://css-tricks.com/snippets/css/star-wars-crawl-text/ -->
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale1">
@@ -18,9 +19,9 @@
             <div id="introContent">
                 <h2>About Me<br /><br />Dawid Wordliczek</h2>
                 <h2>Red Teaming Security Control Tester</h2>
-                <p>Beginner coder in C#(WFA), C++ and python(MID). With the rest of languages I'm able to write with web access. I'm working on mentioned role in Credit Suisse mainly responsible control testing but also doing a lot with general projects about doing APT(Advanced Persistent Thread) simulation.</p>
+                <p>Beginner coder in C#(WFA), C++ and python(MID). With the rest of languages I'm able to write with web access. I'm working on mentioned role in Credit Suisse mainly responsible for control testing but also doing a lot with general projects about doing APT(Advanced Persistent Thread) simulation.</p>
                 <p>I passed CRTP(Certified Red Team Professional), CARTP(Certified Az Red Team Professional) and CISS(Certified Informaiton Security Specialist).</p>
-                <p>My hobbies except IT are basketball(for the last few years didn't had for this enough time), gaming, The Witcher (books and games),Star Wars(books and games), Star Wars LCG, Dune(books and old version movie+tv series) and playing guitar.</p>
+                <p>My hobbies except IT are basketball(for the last few years didn't had enough time for this), gaming, The Witcher (books and games),Star Wars(books and games), Star Wars LCG and playing guitar.</p>
                 <p>Goals: OSCP, OSED, OSEP, OSWA(only if the rest will be passed)</p>
             </div>
         </div>
