--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </br> 
 </br>
     <div id="btn-starwars">
-      <button>Projects</button>
+      <button onclick="projectsbtn()">Projects</button>
     </div>
   </br>
 </br>
