--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </br>
 </br>
     <div id="btn-matrix">
-      <button>Contact</button>
+      <button onclick="contactbtn()">Contact</button>
     </div>
 </body>
 </html>
