--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+   <!-- <meta http-equiv="content-type" content="text/html; charset=utf-8">-->
   <meta name="viewport" content="width=device-width, initial-scale1">
   <link href="rpgui.css" rel="stylesheet" type="text/css">
   <script src="rpgui.js"></script>
@@ -12,8 +12,8 @@
         }
 
         #cont { 
-            top: 5%;
-            left: 25%;
+            height: 100%;
+            width: 100%;
         }
     </style>
 </head>
@@ -31,7 +31,7 @@
     <!-- all rpgui elements must be inside the rpgui-content -->
 	<div class="rpgui-content">
         <!-- Icons -->
-        <div class="rpgui-container framed rpgui-draggable" id="cont">
+        <div class="rpgui-container framed" id="cont">
             <h1>Projects</h1>
             <hr />
 
