--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -31,7 +31,7 @@
     <!-- all rpgui elements must be inside the rpgui-content -->
 	<div class="rpgui-content">
         <!-- Icons -->
-        <div class="rpgui-container framed" id="cont">
+        <div class="rpgui-container framed" id="cont" style="overflow-y:auto;">
             <h1>Projects</h1>
             <hr />
 
