--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <!-- <meta http-equiv="content-type" content="text/html; charset=utf-8">-->
   <meta name="viewport" content="width=device-width, initial-scale1">
   <link href="rpgui.css" rel="stylesheet" type="text/css">
   <script src="rpgui.js"></script>
@@ -48,6 +47,10 @@
             <div class="rpgui-icon potion-green"></div>
             <br /><br />
             <div><a href="https://github.com/WolfMan12333/Lucifer-s-Ear">LE(Lucifer's Ear) - project for WiFi pentest</a></div>
+            <br /><br />
+            <div class="rpgui-icon sword"></div>
+            <br/> <br/>
+            <div><a href="https://github.com/WolfMan12333/ACNR---Task-Quest1-recruitment">Recruitment task to ACNR in Stockholm(challenge with basic pentest and automation it with python)</a></div>
             <br /><br />
             <div class="rpgui-icon potion-red"></div>
             <br /><br />
