--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -2,12 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale1">
-  <link rel="stylesheet" href="index.css">
-  <script type="text/javascript" src="index.js"></script> -->
+  <meta name="viewport" content="width=device-width, initial-scale1">
+  <link rel="stylesheet" href="contact.css">
+  <!-- <script type="text/javascript" src="index.js"></script> -->
 </head>
 <body> 
     <canvas id="Matrix"></canvas>
+    <div id="mtext">dawidwordliczek@gmail.com</div>
     <script src="contact.js"></script>
 </body>
 </html>
