--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 </br>
 </br>
     <div id="btn-stargate">
-      <button>Tutorials</button>
+      <button onclick="tutbtn()">Tutorials</button>
     </div>
   </br>
 </br>
 </br>
     <div id="btn-matrix">
-      <button onclick="conbtn()">Contact</button>
+      <button onclick="contactbtn()">Contact</button>
     </div>
 </body>
 </html>
