--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale1">
+  <meta name="viewport" content="width=device-width, initial-scale">
   <link rel="stylesheet" href="contact.css">
   <!-- <script type="text/javascript" src="index.js"></script> -->
 </head>
