--- a/Tutorials/stargate/video/rto.html
+++ b/Tutorials/stargate/video/rto.html
@@ -14,7 +14,7 @@
         </style>
     </head>
     <video id="vst" class="vst" max-width="100%" max-height="100%" autoplay>
-        <source src="st.mp4" type="video/mp4">
+        <source src="st.mov" type="video/mp4">
     </video>
     <script>
         document.getElementById('vst').addEventListener("ended", function(){
