--- a/Tutorials/stargate/video/wifi.html
+++ b/Tutorials/stargate/video/wifi.html
@@ -13,7 +13,7 @@
             }
         </style>
     </head>
-    <video id="vst" class="vst" max-width="100%" max-height="100%" autoplay>
+    <video id="vst" class="vst" max-width="100%" max-height="100%" autoplay playsinline>
         <source src="st.mov" type="video/mp4">
     </video>
     <script>
