--- a/Tutorials/stargate/video/vehicles.html
+++ b/Tutorials/stargate/video/vehicles.html
@@ -10,6 +10,8 @@
                 right: 0px;
                 bottom: 0px;
                 left: 0px;
+                min-width: 100%;
+                min-height: 100%;
             }
         </style>
     </head>
