--- a/About Me/about.html
+++ b/About Me/about.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="about.js"></script>
     </head>
     <body>
+        <button href="../index.html" class="btnhome">Home</button>
         <audio autoplay>
             <source src="http://www.karottes.net/Star%20Wars/sounds/song.ogg" type="audio/ogg"></source>
             <source src="http://www/karottes.net/Star%20Wars/sounds/song.mp3" type="audio/mp3"></source>
