--- a/About Me/about.html
+++ b/About Me/about.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale1">
         <link rel="stylesheet" href="about.css">
+        <link rel="stylesheet" href="../index.css">
         <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
         <script type="text/javascript" src="about.js"></script>
     </head>
