--- a/About Me/about.html
+++ b/About Me/about.html
@@ -23,7 +23,7 @@
                 <p>Beginner coder in C#(WFA), C++ and python(MID). With the rest of languages I'm able to write with web access. I'm working on mentioned role in Credit Suisse mainly responsible for control testing but also doing a lot with general projects about doing APT(Advanced Persistent Thread) simulation.</p>
                 <p>I passed CRTP(Certified Red Team Professional), CARTP(Certified Az Red Team Professional), OSCP(Offensive Security Certified Professional) and CISS(Certified Information Security Specialist).</p>
                 <p>My hobbies except IT are basketball(for the last few years didn't had enough time for this), gaming, The Witcher (books and games),Star Wars(books and games), Star Wars LCG and playing guitar.</p>
-                <p>Goals: OSED, OSEP, OSWA(only if the rest will be passed) and SEKTOR 7 Trainings(Malware Development)</p>
+                <p>Goals: OSED, OSEP, OSWE(only if the rest will be passed) and SEKTOR 7 Trainings(Malware Development)</p>
             </div>
         </div>
     </body>
