--- a/About Me/about.html
+++ b/About Me/about.html
@@ -3,7 +3,7 @@
     <!-- BASED ON: https://css-tricks.com/snippets/css/star-wars-crawl-text/ -->
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="about.css">
         <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
         <script type="text/javascript" src="about.js"></script>
